# magicprobe

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new_file_type.md
.github/workflows/: ci.yml  docker-integration.yml  publish.yml
docker/: alpine.Dockerfile  debian.Dockerfile  fedora.Dockerfile  ubuntu.Dockerfile
scripts/: test_docker.sh
src/magicprobe/: __init__.py  __main__.py  probe.py  registry.py  result.py
src/magicprobe/_libmagic/: __init__.py  _candidates.py  _loader.py  _wrapper.py
src/magicprobe/types/: __init__.py  archive.py  audio.py  base.py  document.py  executable.py  image.py  video.py
tests/: conftest.py  helpers.py  test_probe.py
tests/integration/: __init__.py  conftest.py  test_integration.py
tests/test_types/: test_archive.py  test_audio.py  test_document.py  test_executable.py  test_image.py  test_video.py
