[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magicprobe"
version = "0.1.0"
description = "A Python library for detecting file types by magic bytes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["magic", "file-type", "mime", "detection", "filetype"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.scripts]
magicprobe = "magicprobe.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/magicprobe"
Repository = "https://github.com/yourusername/magicprobe"
Issues = "https://github.com/yourusername/magicprobe/issues"
Changelog = "https://github.com/yourusername/magicprobe/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/magicprobe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["src/magicprobe"]
